echeck Changelog

2017-09-08  Eric Herman <eric@freesa.org>

	Add check_double(actual, expected, epsilon)

	* src/echeck.h: prototype
	* src/echeck.c: impl
	* tests/test_check_double.c: some basic checks
	* misc/pre-tidy.patch: respin
	* Makefile.am: add test
	* .gitignore: add test

2017-09-07  Eric Herman <eric@freesa.org>

	pass "const char **" for lists of constant strings

2016-06-16  Eric Herman <eric@freesa.org>

	LGPLv3+ friendly structure

	* src/echeck.h: boilerplate LGPLv3+
	* src/echeck.c: boilerplate LGPLv3+
	* README: new file name/locations
	* Makefile.am: include COPYING.GPL3
	* misc/gpl-3.0.txt: renamed to COPYING.GPL3
	* misc/lgpl-3.0.txt: renamed to COPYING
	* COPYING: renamed from misc/lgpl-3.0.txt
	* COPYING.GPL3: renamed from misc/gpl-3.0.txt

2016-06-16  Eric Herman <eric@freesa.org>

	* COPYING: boilerplate LGPLv3+
	* README: reference misc/
	* Makefile.am: include misc/
	* COPYING.GPL3: renamed misc/gpl-3.0.txt
	* COPYING.LGPL3: renamed misc/lgpl-3.0.txt

2016-06-14  Eric Herman <eric@freesa.org>

	* src/echeck.h: make nice for c++
	* misc/pre-tidy.patch: comment out block before running indent
	* Makefile.am: update "make tidy"

2016-06-06  Eric Herman <eric@freesa.org>

	(unsigned) int checks now use long check code.

	WARNING: This breaks ABI, remains source compatible

	* src/echeck.h: factor together int and long
	* src/echeck.c: same
	* tests/test_check_unsigned_int.c: -1 unsigned now a unsigned long

2016-06-05  Eric Herman <eric@freesa.org>

	* src/echeck.c: check_str now handles NULL reasonably
	* tests/test_check_str_null_ptr.c: add test for NULL
	* Makefile.am: add new test
	* .gitignore: ignore new test

2016-05-22  Eric Herman <eric@freesa.org>

	Added "echeck_status" function and updated tests.
	The "check_status" functions allow returning error counts exit codes.
	Values larger than 127 or smaller than -128 will be capped.
	Thus, a value of 256 for instance, will not return EXIT_SUCCESS.
